--- a/website/package.json
+++ b/website/package.json
@@ -30,21 +30,32 @@
   "devDependencies": {
     "@builder.io/qwik": "^1.5.1",
     "@builder.io/qwik-city": "^1.5.1",
+    "@fontsource-variable/fira-code": "^5.0.17",
+    "@fontsource-variable/outfit": "^5.0.12",
+    "@qwik-ui/headless": "^0.3.3",
+    "@qwik-ui/styled": "^0.0.4",
+    "@qwik-ui/utils": "^0.2.1",
+    "@qwikest/icons": "^0.0.13",
     "@types/eslint": "^8.56.5",
     "@types/node": "^20.11.24",
     "@typescript-eslint/eslint-plugin": "^7.1.0",
     "@typescript-eslint/parser": "^7.1.0",
     "autoprefixer": "^10.4.14",
+    "class-variance-authority": "^0.7.0",
     "eslint": "^8.57.0",
     "eslint-plugin-qwik": "^1.5.1",
+    "nx": "^18.2.1",
     "postcss": "^8.4.31",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.4",
+    "qwik-ui": "^0.1.0",
+    "shiki": "^1.2.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.3.3",
     "undici": "*",
     "vercel": "^29.1.1",
     "vite": "^5.1.4",
     "vite-tsconfig-paths": "^4.2.1"
-  }
+  },
+  "nx": {}
 }
