--- a/website/package.json
+++ b/website/package.json
@@ -1,61 +1,60 @@
 {
-  "name": "my-qwik-empty-starter",
-  "description": "App with Routing built-in ready to create your app",
-  "engines": {
-    "node": "^18.17.0 || ^20.3.0 || >=21.0.0"
-  },
-  "engines-annotation": "Mostly required by sharp which needs a Node-API v9 compatible runtime",
-  "private": true,
-  "trustedDependencies": [
-    "sharp"
-  ],
-  "trustedDependencies-annotation": "Needed for bun to allow running install scripts",
-  "type": "module",
-  "scripts": {
-    "build": "qwik build",
-    "build.client": "vite build",
-    "build.preview": "vite build --ssr src/entry.preview.tsx",
-    "build.server": "vite build -c adapters/vercel-edge/vite.config.ts",
-    "build.types": "tsc --incremental --noEmit",
-    "deploy": "vercel deploy",
-    "dev": "vite --mode ssr",
-    "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
-    "fmt": "prettier --write .",
-    "fmt.check": "prettier --check .",
-    "lint": "eslint \"src/**/*.ts*\"",
-    "preview": "qwik build preview && vite preview --open",
-    "start": "vite --open --mode ssr",
-    "qwik": "qwik"
-  },
-  "devDependencies": {
-    "@builder.io/qwik": "^1.5.1",
-    "@builder.io/qwik-city": "^1.5.1",
-    "@fontsource-variable/fira-code": "^5.0.17",
-    "@fontsource-variable/outfit": "^5.0.12",
-    "@qwik-ui/headless": "^0.3.3",
-    "@qwik-ui/styled": "^0.0.4",
-    "@qwik-ui/utils": "^0.2.1",
-    "@qwikest/icons": "^0.0.13",
-    "@types/eslint": "^8.56.5",
-    "@types/node": "^20.11.24",
-    "@typescript-eslint/eslint-plugin": "^7.1.0",
-    "@typescript-eslint/parser": "^7.1.0",
-    "autoprefixer": "^10.4.14",
-    "class-variance-authority": "^0.7.0",
-    "eslint": "^8.57.0",
-    "eslint-plugin-qwik": "^1.5.1",
-    "nx": "^18.2.1",
-    "postcss": "^8.4.31",
-    "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.4",
-    "qwik-ui": "^0.1.0",
-    "shiki": "^1.2.1",
-    "tailwindcss": "3.3.3",
-    "typescript": "5.3.3",
-    "undici": "*",
-    "vercel": "^29.1.1",
-    "vite": "^5.1.4",
-    "vite-tsconfig-paths": "^4.2.1"
-  },
-  "nx": {}
+    "name": "my-qwik-empty-starter",
+    "description": "App with Routing built-in ready to create your app",
+    "engines": {
+        "node": "^18.17.0 || ^20.3.0 || >=21.0.0"
+    },
+    "engines-annotation": "Mostly required by sharp which needs a Node-API v9 compatible runtime",
+    "private": true,
+    "trustedDependencies": ["sharp"],
+    "trustedDependencies-annotation": "Needed for bun to allow running install scripts",
+    "type": "module",
+    "scripts": {
+        "build": "qwik build",
+        "build.client": "vite build",
+        "build.preview": "vite build --ssr src/entry.preview.tsx",
+        "build.server": "vite build -c adapters/vercel-edge/vite.config.ts",
+        "build.types": "tsc --incremental --noEmit",
+        "deploy": "vercel deploy",
+        "dev": "vite --mode ssr",
+        "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
+        "fmt": "prettier --write .",
+        "fmt.check": "prettier --check .",
+        "lint": "eslint \"src/**/*.ts*\"",
+        "preview": "qwik build preview && vite preview --open",
+        "start": "vite --open --mode ssr",
+        "qwik": "qwik"
+    },
+    "devDependencies": {
+        "@builder.io/qwik": "^1.5.1",
+        "@builder.io/qwik-city": "^1.5.1",
+        "@ditadi/qwik-hooks": "^0.0.1-beta.1",
+        "@fontsource-variable/fira-code": "^5.0.17",
+        "@fontsource-variable/outfit": "^5.0.12",
+        "@qwik-ui/headless": "^0.3.3",
+        "@qwik-ui/styled": "^0.0.4",
+        "@qwik-ui/utils": "^0.2.1",
+        "@qwikest/icons": "^0.0.13",
+        "@types/eslint": "^8.56.5",
+        "@types/node": "^20.11.24",
+        "@typescript-eslint/eslint-plugin": "^7.1.0",
+        "@typescript-eslint/parser": "^7.1.0",
+        "autoprefixer": "^10.4.14",
+        "class-variance-authority": "^0.7.0",
+        "eslint": "^8.57.0",
+        "eslint-plugin-qwik": "^1.5.1",
+        "nx": "^18.2.1",
+        "postcss": "^8.4.31",
+        "prettier": "^3.2.5",
+        "prettier-plugin-tailwindcss": "^0.5.4",
+        "qwik-ui": "^0.1.0",
+        "shiki": "^1.2.1",
+        "tailwindcss": "3.3.3",
+        "typescript": "5.3.3",
+        "undici": "*",
+        "vercel": "^29.1.1",
+        "vite": "^5.1.4",
+        "vite-tsconfig-paths": "^4.2.1"
+    },
+    "nx": {}
 }
