ci: 🎡 add vercel analytics

--- a/website/package.json
+++ b/website/package.json
@@ -39,6 +39,8 @@
     "@types/node": "^20.11.24",
     "@typescript-eslint/eslint-plugin": "^7.1.0",
     "@typescript-eslint/parser": "^7.1.0",
+    "@vercel/analytics": "^1.2.2",
+    "@vercel/speed-insights": "^1.0.10",
     "autoprefixer": "^10.4.14",
     "class-variance-authority": "^0.7.0",
     "eslint": "^8.57.0",
